Fixed issues with drag not being able to find id:s, drag and drop works perfect. Squashed some more bugs.

--- a/src/App.css
+++ b/src/App.css
@@ -340,10 +340,8 @@ svg:hover {
 }
 
 .reset {
-  width: 20px;
-  height: 20px;
   background-color: transparent;
-  margin-right: 40px;
+  margin-right: 20px;
   margin-top: 5px;
   cursor: pointer;
 }
